--- a/public/index.html
+++ b/public/index.html
@@ -286,15 +286,15 @@
       <div class="property_type_images">
 
         <div class="home1 box">
-          <img class="home" src="https://images.unsplash.com/photo-1549517045-bc93de075e53?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzNTA4MzYyMA&ixlib=rb-1.2.1&q=85">
+          <img class="home" src="/Pro1.png">
         </div>
 
         <div class="home2 box">
-          <img class="home" src="https://images.unsplash.com/photo-1430285561322-7808604715df?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzNTA4MzYyMA&ixlib=rb-1.2.1&q=85">
+          <img class="home" src="/Pro2.png">
         </div>
 
         <div class="home3 box">
-          <img class="home" src="https://images.unsplash.com/photo-1599809275671-b5942cabc7a2?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzNTA4MzY4MA&ixlib=rb-1.2.1&q=85">
+          <img class="home" src="/Pro3.png">
         </div>
 
       </div>
@@ -338,7 +338,7 @@
 
       <div class="feature">
         <img class="feature_image" src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzNTA4MzMxMQ&ixlib=rb-1.2.1&q=85.jpg">
-        <img class="feature2_image" src="https://images.unsplash.com/photo-1497366811353-6870744d04b2?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzNTA4MzU2NQ&ixlib=rb-1.2.1&q=85">
+        <img class="feature2_image" src="/spon.png">
       </div>
 
       <div class="feature_text">
@@ -467,11 +467,12 @@
   <!-- -----------------Eight ------------------------>
   <section class="eight">
     <h3>Get Our Newsletter</h3>
-    <h4>To join the worldwide community</h4>
-    <div class="email">
+    <img class="feature2_image" src="/logo.png">
+    
+    <!--<div class="email">
       <input id="mail" type="email" placeholder="Type your Email Address">
       <button id="btn4">Send Now</button>
-    </div>
+    </div>-->
 
     <hr>
     <footer>
