--- a/public/index.html
+++ b/public/index.html
@@ -466,9 +466,7 @@
 
   <!-- -----------------Eight ------------------------>
   <section class="eight">
-    <h3>Get Our Newsletter</h3>
-    <img class="feature2_image" src="/logo.png">
-    
+    <h3>Lucky ประกันภัย</h3>
     <!--<div class="email">
       <input id="mail" type="email" placeholder="Type your Email Address">
       <button id="btn4">Send Now</button>
@@ -487,7 +485,7 @@
     <div class="footer-container">
       <!-- Company Info -->
       <div class="footer-company">
-        <h3>บริษัท สิงคลี่ อินชัวรันส์ โบรเกอร์ จำกัด</h3>
+        <h3>บริษัท ลัคกี้ อินชัวรันส์ โบรเกอร์ จำกัด</h3>
         <p>123 ถนนอมรนาถ แขวงราชเทวี เขตราชเทวี กรุงเทพฯ 10230</p>
         <div class="footer-social">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
