--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real state</title>
+  <title>Lucky</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="style2.css">
   <link rel="stylesheet" type="text/css" href="style3.css">
@@ -170,8 +170,8 @@
     <header class="header">
       <nav class="navBar">
         <a href="#" class="navBar_logo">
-          <p>Lucky 
-            ประกันภัย
+          <img src="/luckyy.jpg" width="100%">
+          <p>Lucky ประกันภัย
           </p>
         </a>
 
