--- a/public/index.html
+++ b/public/index.html
@@ -170,7 +170,7 @@
     <header class="header">
       <nav class="navBar">
         <a href="#" class="navBar_logo">
-          <img src="/luckyy.jpg" width="100%">
+          <img id= "logoluckyy" src="/luckyy.jpg" width="100%">
           <p>Lucky ประกันภัย
           </p>
         </a>
