--- a/public/index.html
+++ b/public/index.html
@@ -170,8 +170,7 @@
     <header class="header">
       <nav class="navBar">
         <a href="#" class="navBar_logo">
-          <img id= "logoluckyy" src="/luckyy.jpg" width="5%">
-          <p>Lucky ประกันภัย
+          <img id= "logoluckyy" src="/luckyy.jpg" width="5%"> <p>Lucky ประกันภัย
           </p>
         </a>
 
