--- a/public/index.html
+++ b/public/index.html
@@ -167,27 +167,28 @@
 
     <!---------------- Header -------------------->
     <div class="top-blue-bar">
-    <header class="header">
-      <nav class="navBar">
-        <a href="#" class="navBar_logo">
-          <p> <img id= "logoluckyy" src="/luckyy.jpg" width="10%"> Lucky ประกันภัย
-          </p>
-        </a>
-
-        <ul class="navMenu">
-
-          <li><a href="#" class="nav_items">ประกันรถยนต์</a></li>
-          <li><a href="#" class="nav_items">ประกันเดินทาง</a></li>
-          <li><a href="#" class="nav_items">ประกันสุขภาพ</a></li>
-          <li><a href="#" class="nav_items">ประกันอุบัติเหตุ</a></li>
-          <li><a href="#" class="nav_items">ประกันบ้าน</a></li>
-          <li><a href="#" class="nav_items">ประกันอื่นๆ</a></li>
-          <li><a href="#" class="nav_items">ประกันโรงงาน</a></li>
-
-        </ul>
-      </nav>
+      <header class="header">
+        <nav class="navBar">
+          <a href="#" class="navBar_logo">
+            <div class="logo-container">
+              <img id="logoluckyy" src="/luckyy.jpg" alt="logo">
+              <span class="logo-text">Lucky ประกันภัย</span>
+            </div>
+          </a>
+    
+          <ul class="navMenu">
+            <li><a href="#" class="nav_items">ประกันรถยนต์</a></li>
+            <li><a href="#" class="nav_items">ประกันเดินทาง</a></li>
+            <li><a href="#" class="nav_items">ประกันสุขภาพ</a></li>
+            <li><a href="#" class="nav_items">ประกันอุบัติเหตุ</a></li>
+            <li><a href="#" class="nav_items">ประกันบ้าน</a></li>
+            <li><a href="#" class="nav_items">ประกันอื่นๆ</a></li>
+            <li><a href="#" class="nav_items">ประกันโรงงาน</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
-    </header>
+    
 
     <!-------------------Brand-------------------------->
 
