--- a/public/index.html
+++ b/public/index.html
@@ -185,6 +185,17 @@
         </nav>
       </header>
     </div>
+    <!-- แถบน้ำเงินอ่อน -->
+<div class="sub-blue-bar">
+  <ul class="subMenu">
+    <li><a href="#" class="sub_items">แจ้ง</a></li>
+    <li><a href="#" class="sub_items">เคลม</a></li>
+    <li><a href="#" class="sub_items">ตรวจสอบกรมธรรม</a></li>
+    <li><a href="#" class="sub_items">ติดต่อเรา</a></li>
+    <li><a href="#" class="sub_items">โปรโมชั่น</a></li>
+  </ul>
+</div>
+
     
     
 
