--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   
 
 <body>
-
+  <div class="main-wrapper">
   <section class="first">
 
     <!---------------- Header -------------------->
@@ -276,262 +276,69 @@
     </div>
   </section>
 
-  <!-- -----------------Seventh ------------------------>
-  <!--<section class="seven">
-    <div class="partners">
-
-      <ul class="partner_list">
-        <li>
-          <p id="air"><i class="fab fa-airbnb"></i>&nbsp;airbnb</p>
-        </li>
-        <li>
-          <p id="buzz">Buzz</p>
-        </li>
-        <li>
-          <p id="chase">CHASE</p>
-        </li>
-
-        <li>
-          <p id="uber">UBER</p>
-        </li>
-        <li>
-          <p id="mircosoft"><i class="fab fa-microsoft">&nbsp;</i>Microsoft</p>
-        </li>
-      </ul>
-    </div>
-
-    <div class="call">
-      <p>Give us a call 1-888-111-2222 and we can set you up, or <a href="#">check our pricing plans</a></p>
-    </div>-->
+  
   </section>
 
   <!-- -----------------Eight ------------------------>
   <section class="eight">
     <h3>Lucky ประกันภัย</h3>
-    <!--<div class="email">
-      <input id="mail" type="email" placeholder="Type your Email Address">
-      <button id="btn4">Send Now</button>
-    </div>-->
+    
 
   </section>
-
-  <!-- New Footer Section -->
-  <footer class="main-footer">
-    <div class="footer-container">
-      <!-- Company Info -->
-      <div class="footer-company">
-        <h3>บริษัท ลัคกี้ อินชัวรันส์ โบรเกอร์ จำกัด</h3>
-        <p>123 ถนนอมรนาถ แขวงราชเทวี เขตราชเทวี กรุงเทพฯ 10230</p>
-        <div class="footer-social">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-line"></i></a>
-        </div>
-      </div>
-
-      <!-- Insurance Types -->
-      <div class="footer-column">
-        <h4>หลักประกันประเภท</h4>
-        <ul>
-          <li><a href="#">ประกันรถยนต์</a></li>
-          <li><a href="#">ประกันเดินทาง</a></li>
-          <li><a href="#">ประกันสุขภาพ</a></li>
-          <li><a href="#">ประกันอุบัติเหตุ</a></li>
-          <li><a href="#">ประกันบ้าน</a></li>
-          <li><a href="#">ประกันอื่น ๆ</a></li>
-        </ul>
-      </div>
-
-      <!-- Services -->
-      <div class="footer-column">
-        <h4>บริการลูกค้า</h4>
-        <ul>
-          <li><a href="#">เคลมประกัน</a></li>
-          <li><a href="#">ตรวจสอบกรมธรรม์</a></li>
-          <li><a href="#">สถานการประกันภัย (ตร.)</a></li>
-          <li><a href="#">แจ้งปัญหาการใช้บริการ</a></li>
-          <li><a href="#">คู่มือบริษัท</a></li>
-          <li><a href="#">โรงพยาบาล</a></li>
-          <li><a href="#">สิทธิประโยชน์สมาชิก</a></li>
-        </ul>
-      </div>
-
-      <!-- About -->
-      <div class="footer-column">
-        <h4>บริษัท</h4>
-        <ul>
-          <li><a href="#">เกี่ยวกับเรา</a></li>
-          <li><a href="#">ติดต่อเรา</a></li>
-          <li><a href="#">ร่วมงานกับเรา</a></li>
-          <li><a href="#">ข่าวบริษัท</a></li>
-          <li><a href="#">นักลงทุน</a></li>
-          <li><a href="#">คำถามที่พบบ่อย</a></li>
-          <li><a href="#">ประกันประกันภัย</a></li>
-        </ul>
-      </div>
-
-      <!-- Contact Info -->
-      <div class="footer-contact">
-        <h4>ติดต่อสอบถาม</h4>
-        <div class="contact-item">
-          <strong>095-165-5348</strong>
-        </div>
-        <div class="contact-item">
-          <strong>02-222-2222</strong>
-        </div>
-        <div class="contact-item">
-          <strong>เวลาทำการ:</strong>
-          <span>08.00-17.00</span>
-        </div>
-        <div class="contact-item">
-          <strong>อีเมล:</strong>
-          <a href="mailto:lucky.business@gmail.com" class="contact-email">lucky.business@gmail.com</a>
-        </div>
+</div>
+<footer class="main-footer">
+  <div class="footer-container">
+    <div class="footer-company">
+      <h3>บริษัท ลัคกี้ อินชัวรันส์ โบรเกอร์ จำกัด</h3>
+      <p>123 ถนนอมรนาถ แขวงราชเทวี เขตราชเทวี กรุงเทพฯ 10230</p>
+      <div class="footer-social">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-line"></i></a>
       </div>
     </div>
-  </footer>
-
-  <style>
-    /* Footer Styles */
-    .main-footer {
-      background: linear-gradient(135deg, #4a90e2, #5ba3f5);
-      color: white;
-      padding: 40px 0;
-      margin-top: 50px;
-    }
-  
-    .footer-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-      display: grid;
-      grid-template-columns: 2fr 1fr 1fr 1fr 1.5fr;
-      gap: 40px;
-      align-items: start;
-    }
-  
-    .footer-company {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .footer-company h3 {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 15px;
-      color: white;
-    }
-  
-    .footer-company p {
-      font-size: 14px;
-      line-height: 1.6;
-      margin-bottom: 20px;
-      color: rgba(255, 255, 255, 0.9);
-    }
-  
-    .footer-social {
-      display: flex;
-      gap: 15px;
-    }
-  
-    .footer-social a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 50%;
-      color: white;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
-  
-    .footer-social a:hover {
-      background: rgba(255, 255, 255, 0.3);
-      transform: translateY(-2px);
-    }
-  
-    .footer-column h4 {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: white;
-    }
-  
-    .footer-column ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-  
-    .footer-column ul li {
-      margin-bottom: 12px;
-    }
-  
-    .footer-column ul li a {
-      color: rgba(255, 255, 255, 0.9);
-      text-decoration: none;
-      font-size: 14px;
-      transition: color 0.3s ease;
-    }
-  
-    .footer-column ul li a:hover {
-      color: white;
-      text-decoration: underline;
-    }
-  
-    .footer-contact h4 {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: white;
-    }
-  
-    .contact-item {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 15px;
-      font-size: 14px;
-      color: rgba(255, 255, 255, 0.9);
-    }
-  
-    .contact-item strong {
-      color: white;
-      margin-right: 10px;
-      min-width: 80px;
-    }
-  
-    .contact-email {
-      color: rgba(255, 255, 255, 0.9);
-      text-decoration: none;
-    }
-  
-    .contact-email:hover {
-      color: white;
-      text-decoration: underline;
-    }
-  
-    @media (max-width: 768px) {
-      .footer-container {
-        grid-template-columns: 1fr;
-        gap: 30px;
-        text-align: center;
-      }
-  
-      .footer-social {
-        justify-content: center;
-      }
-    }
-  
-    @media (max-width: 1024px) {
-      .footer-container {
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-      }
-    }
-  </style>
-  
+    <div class="footer-column">
+      <h4>หลักประกันประเภท</h4>
+      <ul>
+        <li><a href="#">ประกันรถยนต์</a></li>
+        <li><a href="#">ประกันเดินทาง</a></li>
+        <li><a href="#">ประกันสุขภาพ</a></li>
+        <li><a href="#">ประกันอุบัติเหตุ</a></li>
+        <li><a href="#">ประกันบ้าน</a></li>
+        <li><a href="#">ประกันอื่น ๆ</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h4>บริการลูกค้า</h4>
+      <ul>
+        <li><a href="#">เคลมประกัน</a></li>
+        <li><a href="#">ตรวจสอบกรมธรรม์</a></li>
+        <li><a href="#">สถานการประกันภัย (ตร.)</a></li>
+        <li><a href="#">แจ้งปัญหาการใช้บริการ</a></li>
+        <li><a href="#">คู่มือบริษัท</a></li>
+        <li><a href="#">โรงพยาบาล</a></li>
+        <li><a href="#">สิทธิประโยชน์สมาชิก</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h4>บริษัท</h4>
+      <ul>
+        <li><a href="#">เกี่ยวกับเรา</a></li>
+        <li><a href="#">ติดต่อเรา</a></li>
+        <li><a href="#">ร่วมงานกับเรา</a></li>
+        <li><a href="#">ข่าวบริษัท</a></li>
+        <li><a href="#">นักลงทุน</a></li>
+        <li><a href="#">คำถามที่พบบ่อย</a></li>
+        <li><a href="#">ประกันประกันภัย</a></li>
+      </ul>
+    </div>
+    <div class="footer-contact">
+      <h4>ติดต่อสอบถาม</h4>
+      <div class="contact-item"><strong>095-165-5348</strong></div>
+      <div class="contact-item"><strong>02-222-2222</strong></div>
+      <div class="contact-item"><strong>เวลาทำการ:</strong> <span>08.00-17.00</span></div>
+      <div class="contact-item"><strong>อีเมล:</strong> <a href="mailto:lucky.business@gmail.com" class="contact-email">lucky.business@gmail.com</a></div>
+    </div>
+  </div>
+</footer>
 </body>
-
-</head>
 </html>
